[metadata]
name = aiohappybase
version = attr: aiohappybase.__version__
description = Asyncio fork of HappyBase
long_description = file: README.rst
author = Roger Aiudi
author_email = aiudirog@gmail.com
url = https://github.com/python-happybase/aiohappybase
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    hbase
    thrift
    async
    asyncio
    happybase

[options]
include_package_data = True
packages = find:
install_requires =
    thriftpy2>=0.4.10
    async_generator; python_version < '3.7'
py_modules =
    happybase

[options.packages.find]
exclude =
    tests

[coverage:run]
source = .
include = aiohappybase/*,tests/*

[coverage:html]
directory = coverage/

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    if __name__ == .__main__.:
    pass
include = aiohappybase/*,tests/*

[build_sphinx]
source-dir = doc/
build-dir = doc/build/

[flake8]
max-line-length = 80
filename = *happybase*/**.py
exclude = tests,build,dist,venv,.tox,*.egg*,coverage,doc

[tox:tox]
envlist = py36, py37, py38

[testenv]
deps =
    asynctest
    coverage
commands =
    python -m unittest
    AIOHAPPYBASE_COMPAT=0.90 python -m unittest
