[metadata]
name = aiohappybase
description = Asyncio fork of HappyBase
long_description = file: README.rst
author = Roger Aiudi
author_email = aiudirog@gmail.com
url = https://github.com/python-happybase/aiohappybase
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    hbase
    thrift
    async
    asyncio
    happybase

[options]
include_package_data = True
packages = find:
py_modules =
    happybase

[options.packages.find]
exclude =
    tests

[coverage:run]
source = .
include = aiohappybase/*,tests/*
omit = aiohappybase/_version.py

[coverage:html]
directory = coverage/

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    if __name__ == .__main__.:
    pass
include = aiohappybase/*,tests/*
omit = aiohappybase/_version.py

[build_sphinx]
source-dir = doc/
build-dir = doc/build/

[flake8]
max-line-length = 80
filename = *happybase*/**.py
exclude = tests,build,dist,venv,.tox,*.egg*,coverage,doc

[tox:tox]
envlist = py36, py37, py38, py39

[testenv]
deps = -rtest-requirements.txt
commands =
    python -m pytest
    AIOHAPPYBASE_COMPAT=0.90 python -m pytest

[tool:pytest]
junit_family = xunit1

[versioneer]
VCS = git
style = pep440
versionfile_source = aiohappybase/_version.py
versionfile_build = aiohappybase/_version.py
tag_prefix = v
parentdir_prefix = aiohappybase-
